@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+04-Dec-2001
+~~~~~~~~~~~
+Bugfix: Toggling the section with a middle button drag could lose the primary
+	selection (Andras Mohari).
+
 03-Dec-2001
 ~~~~~~~~~~~
 Use gtk_set_locale instead of setlocale (Andras Mohari).
